syntax = "proto3";

package com.service.grpc;

option java_package = "com.service.grpc";
option java_multiple_files = true;

message SearchRequest {
  string keyword = 1;
}
